# UrlShrinkShort

./: .env  Cargo.toml  README.md  dump.sql
src/: main.rs
src/controller/: hello_controller.rs  mod.rs  url_controller.rs
src/dao/: mod.rs  urls_dao.rs
src/pojo/: mod.rs  msg.rs  url.rs
src/util/: mod.rs
web/: index.html
