[package]
name = "url_shrink_short"
version = "0.1.0"
edition = "2021"
authors = ["smilex<msmliexx2@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
tide-fluent-routes = "0.1.5"
async-std = { version = "1.8.0", features = ["attributes"] }
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "macros", "mysql", "json", "chrono" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
log = "0.4"
pretty_env_logger = "0.4.0"
chrono = "0.4.19"
dotenv = "0.15.0"
lazy_static = "1.4.0"
rand = "0.8.5"

[profile.release]
lto = true
strip = true
debug = false
opt-level = 3